[package]
name = "witness_audio_injector"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
log = "0.4.19"
native-windows-derive = "1.0.3"
native-windows-gui = "1.0.13"
rand = {version = "0.8.5", features =["std_rng"]}
rust-embed = "6.6.1"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
simplelog = "0.12.1"
walkdir = "2.3"
zip = "0.6.4"
